# Optimal-Transport

./: CMakeLists.txt  README.md
OT/: CMakeLists.txt  README.md
OT/include/: COMTMeshViewer.h  OptimalMassTransportationMesh.h  PowerDiagramMesh.h
OT/src/: omt_viewer.cpp
